--- a/views/aboutTemplate.ejs
+++ b/views/aboutTemplate.ejs
@@ -38,7 +38,7 @@
                     </p>
                     <% } %>
 
-                        <% if (typeof paragraphTwo !=='undefined' ) { %>
+                        <% if (typeof paragraphTwo !=='undefined' ) { %>w
                             <p>
                                 <%= paragraphTwo %>
                             </p>
