--- a/views/header.ejs
+++ b/views/header.ejs
@@ -63,15 +63,7 @@
                 <a href="/whyhcc">Why HCC</a>
                 <a href="/leaderships">Leadership</a>
                 <a href="/facultyandstaffs">Faculty and Staffs</a>
-                <a href="/departmentofhcc">Department of hcc</a>
-                <a href="/location">Location</a>
-
                 <a href="/contact">Contact</a>
-            </div>
-
-            <div id="admission">
-                <h2>Admission</h2>
-                <a href="">How to Apply</a>
             </div>
         </div>
 
@@ -86,7 +78,7 @@
                     <a href="/bachelorincomputerapplication">Bachelor in computer Application (BCA)</a>
                     <a href="/bachelorininformationtechnology">
                         BSc Computer Science and Information Technology</a>
-                    <a href="/bachelorinlaw">Bachelo in Law</a>
+                    <a href="/bachelorinlaw">Bachelo in Law</a> 
                 </div>
                 <div id="business-degree">
                     <h2>Business Degree</h2>
@@ -97,7 +89,6 @@
                     <a href="/hsebscience">+2 in Science</a>
                     <a href="/hsebmanagement">+2 in Management</a>
                     <a href="/hseblaw">+2 in Law</a>
-                    <!-- <a href="/hsebhumanities">+2 in Humanities</a> -->
                     <a href="/hsebhotelmanagement">+2 in Hotel Management</a>
                 </div>
             </div>
@@ -105,17 +96,17 @@
             <div id="second-div">
                 <div id="connect">
                     <h2>Connect</h2>
-                    <a href="">News & Event</a>
+                    <a href="/newsandevent">News & Event</a>
                     <a href="">Alumni</a>
                 </div>
 
 
                 <div id="student-life">
                     <h2>Student Life</h2>
-                    <a href="">Notices</a>
                     <a href="">Student Area</a>
                     <a href="">Scholarship</a>
                     <a href="">Notices</a>
+                    <a href="">Galary</a>
                 </div>
 
             </div>
