--- a/public/stylesheets/facultyandstaff.css
+++ b/public/stylesheets/facultyandstaff.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     gap: 10px;
     width: 100%;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 #staff-container #each-staff {
