--- a/views/eachstaff.ejs
+++ b/views/eachstaff.ejs
@@ -33,9 +33,9 @@
                     </div>
 
 
-                    <% if (typeof introduction !=='undefined' ) { %>
+                    <% if (typeof description !=='undefined' ) { %>
                         <p>
-                            <%= introduction %>
+                            <%= description %>
                         </p>
                         <% } %>
 
