--- a/views/header.ejs
+++ b/views/header.ejs
@@ -36,7 +36,7 @@
         </a>
 
         <div id="right-nav">
-            <a href="">Apply Now</a>
+            <a href="/contact">Contact Us</a>
             <a id="menu-button">
                 menu
                 <i class="ri-menu-line"></i>
