--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -6,45 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>footer</title>
 
+
+
+    <!-- remix cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/footer.css">
 </head>
 
 <body>
-    <div id="footer">
-        <div class="footer-box">
-            <img src="/images/logo.jpg" alt="">
-            <h1>Heatuda City College</h1>
-            <h1>Heatuda City College</h1>
+    <div id="footer-container">
 
-
-            <h4>Piple-5 Hetauda</h4>
-            <h4>Makawanpur, Nepal</h4>
-
-        </div>
-        <div class="footer-box">
-            <h2>Quick Links</h2>
-            <a href="">About</a>
-            <a href="">ACADEMICS</a>
-            <a href="">INFRASTRUCTURE</a>
-        </div>
-        <div class="footer-box">
-            <a href="">contact</a>
-            <a href="">carears</a>
-            <a href="">ing</a>
-        </div>
-        <div class="footer-box">
-            <h2>programs</h2>
-            <a href="">it degree</a>
-            <a href="">business degree</a>
-
-        </div>
-        <div class="footer-box">
-            <h2>contact us</h2>
+        <div id="top">
             <a href="">
-                01-5970012, 9801042242
+                <i class="ri-mail-line"></i>
             </a>
-            <a href="">info@gmail.com</a>
+            <a href="">
+                <i class="ri-phone-line"></i>
+            </a>
+            <a href="">
+                <i class="ri-facebook-line"></i>
+            </a>
+            <a href="">
+                <i class="ri-youtube-line"></i>
+            </a>
+        </div>
+        <div id="bottom">
+            <div id="logo">
+                <img src="/images/logo.jpg" alt="">
+                <h3>Hetauda City Colleg</h3>
+            </div>
+            <div id="cources">
+                <h2>Quick Links</h2>
+                <a href="">BCA</a>
+                <a href="">BscCsit</a>
+                <a href="">BBA</a>
+                <a href="">MBS</a>
+                <a href="">Galary</a>
+                <a href="">Contact</a>
+            </div>
+
+            <div id="google-map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2696.632502373647!2d85.04622824837043!3d27.417107969823345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb4991cc5cd01d%3A0x871e7e627e6b38b!2sHetauda%20City%20College!5e0!3m2!1sen!2snp!4v1700283649139!5m2!1sen!2snp"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>w
+            </div>
+        </div>
+        <div id="copyright">
+            <a href="">Copyright © 2021 Hetauda City College All Rights Reserved</a>
+            <a href="">Terms And Conditions
+            </a>
+            <a href="">
+                Privacy Policy</a>
         </div>
     </div>
 </body>
