--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -39,12 +39,12 @@
             </div>
             <div id="cources">
                 <h2>Quick Links</h2>
-                <a href="">BCA</a>
-                <a href="">BscCsit</a>
-                <a href="">BBA</a>
-                <a href="">MBS</a>
-                <a href="">Galary</a>
-                <a href="">Contact</a>
+                <a href="/bachelorincomputerapplication">BCA</a>
+                <a href="/bachelorininformationtechnology">BscCsit</a>
+                <!-- <a href="/">BBA</a> -->
+                <!-- <a href="/">MBS</a> -->
+                <a href="/galary">Galary</a>    
+                <a href="/contact">Contact</a>
             </div>
 
             <div id="google-map">
