--- a/views/galary.ejs
+++ b/views/galary.ejs
@@ -39,7 +39,26 @@
                         magni sapiente sint libero?</p>
                 </div>
             </div> -->
-            
+
+
+
+
+
+        </div>
+
+        <div id="container">
+
+            <div id="photo-preview">
+                <!-- <div class="preview-img active">
+                    <img src="/images/logo.jpg" alt="">
+                </div> -->
+
+                
+            </div>
+
+            <i id="prev-btn" onclick="changeSlide(-1)" class="ri-skip-left-line"></i>
+            <i id="next-btn" onclick="changeSlide(1)" class="ri-skip-right-line"></i>
+            <i class="ri-close-circle-line" id="cancel-preview"></i>
         </div>
 
 
