--- a/views/header.ejs
+++ b/views/header.ejs
@@ -103,10 +103,10 @@
 
                 <div id="student-life">
                     <h2>Student Life</h2>
-                    <a href="">Student Area</a>
-                    <a href="">Scholarship</a>
-                    <a href="">Notices</a>
-                    <a href="">Galary</a>
+                    <a href="#">Student Area</a>
+                    <a href="#">Scholarship</a>
+                    <a href="#">Notices</a>
+                    <a href="/galary">Galary</a>
                 </div>
 
             </div>
