--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -8,6 +8,8 @@
     flex-direction: column;
     gap: 30px;
     display: flex;
+    z-index: 9;
+    position: relative;
 }
 
 #footer-container #top {
