Comment will be subkmitted to database has beeen upadated

--- a/views/eachnewsandevent.ejs
+++ b/views/eachnewsandevent.ejs
@@ -42,10 +42,11 @@
 
 
 
-            <form action="" id="writing-comment-area">
-                <textarea name="" id="comment-of-commenter" cols="30" rows="10" placeholder="Write Your Comment Here"></textarea>
+            <form action="/comment" id="writing-comment-area" method="post">
+                <textarea name="comment" id="comment-of-commenter" cols="30" rows="10"
+                    placeholder="Write Your Comment Here"></textarea>
 
-                <input type="text" name="" id="your-name" placeholder="Enter Your Name" vaue="heloo">
+                <input type="text" name="username" id="your-name" placeholder="Enter Your Name" vaue="heloo">
 
                 <input type="submit" value="Submit Comment" id="submit-comment-button">
             </form>
@@ -91,7 +92,7 @@
 
 
 
-            <script src="   /javascripts/eachnewsandevent.js"></script>
+            <script src="/javascripts/eachnewsandevent.js"></script>
 </body>
 
 </html>
