Commented data will be stored at database

--- a/views/eachnewsandevent.ejs
+++ b/views/eachnewsandevent.ejs
@@ -46,7 +46,7 @@
                 <textarea name="comment" id="comment-of-commenter" cols="30" rows="10"
                     placeholder="Write Your Comment Here"></textarea>
 
-                <input type="text" name="username" id="your-name" placeholder="Enter Your Name" value="heloo">
+                <input type="text" name="username" id="your-name" placeholder="Enter Your Name">
 
                 <input type="submit" value="Submit Comment" id="submit-comment-button">
             </form>
@@ -55,25 +55,12 @@
 
             <div id="comment-showing-area">
 
+
                 <h1 id="all-comments">All Comments</h1>
-
-
+                
                 <div id="each-comment">
                     <h3 id="name-of-commenter">name of the commenter</h3>
                     <p>Comment of that person</p>
-                </div>
-                <div id="each-comment">
-                    <h3>name of the commenter</h3>
-                    <p>Comment of that perso</p>
-                </div>
-                <div id="each-comment">
-                    <h3>name of the commenter</h3>
-                    <p>Comment of that perso
-
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi delectus dolor voluptatem
-                        obcaecati exercitationem aliquid quas quod, praesentium expedita odio nulla, fuga dolore magnam
-                        voluptates eaque sint dignissimos commodi libero.
-                    </p>
                 </div>
             </div>
 
