--- a/views/eachnewsandevent.ejs
+++ b/views/eachnewsandevent.ejs
@@ -42,7 +42,7 @@
 
 
 
-            <form action="/comment" id="writing-comment-area" method="post">
+            <form action="/newsandevent/<%= url %>" id="writing-comment-area" method="post">
                 <textarea name="comment" id="comment-of-commenter" cols="30" rows="10"
                     placeholder="Write Your Comment Here"></textarea>
 
